# hypr-voice-controls

./: .gitignore  AGENTS.md  README.md  getting-started.md  hvc  plan.md  pyproject.toml  voice-hotkey.py
.beads/: beads.jsonl  metadata.json
.github/workflows/: ci.yml
examples/hypr/: voice-commands.json  voice-hotkey.autostart.conf  voice-hotkey.bindings.conf
examples/systemd/: voice-hotkey.service  voice-runtime-health-notify@.service  voice-runtime-health.service  voice-runtime-health.timer  wakeword.service
live/.config/hypr/: bindings.conf
live/Documents/Obsidian Notes/Research/OpenCode/Voice Commands/: getting-started.md
scripts/: live-voice-logs.sh  live_hotkey_e2e.sh  phase0_baseline_latency.py  pre_release_checks.sh  reset-voice-services.sh  restore.sh  runtime-health-check.sh  runtime_v2_acceptance.py  snapshot.sh
tests/: test_core_units.py  test_phase0_guardrails.py  test_phase1_control_plane.py  test_phase2_job_queue.py  test_phase2_orchestrator_cancel.py  test_phase2_state_machine.py  test_phase3_wakeword_responsiveness.py  test_phase4_commands_integrations.py
voice_controls/: __init__.py  __main__.py  app.py  audio.py  commands.py  config.py  integrations.py  logging_utils.py  overlay.py  state_utils.py  stt.py
voice_hotkey/: app.py  asr_whispercpp.py  audio.py  audio_stream.py  commands.py  config.py  integrations.py  logging_utils.py  models.py  orchestrator.py  overlay.py  state_utils.py  stt.py  tooling.py  vad.py  wakeword.py
voice_hotkey/runtime/: __init__.py  controller.py  job_queue.py  state_machine.py
